src/components/shoppingCart/shoppingCart.module.scss
@import "/src/styles/global";
.overlay {
  background-color: rgba(0, 0, 0, 0.4);
  //backdrop-filter: blur(2px);
  position: fixed;
  top: 0;
  z-index: 99;
  width: 100vw;
  height: 100vh;
}

.cart {
  overflow: auto;
  display: flex;
  flex-direction: column;
  position: fixed;
  top: 0;
  right: 0;
  z-index: 100;

  width: max(300px, 40vw);

  height: 100dvh;
  transition: height 0.3s linear;

  padding: 0rem 0.75rem 1rem;

  background-color: white;

  animation: 0.3s slide-in;

  @media (max-width: 350px) {
    width: 100vw;
  }

  @keyframes slide-in {
    0% {
      right: -100%;
    }
    100% {
      right: 0;
    }
  }
}

.cartHeader {
  display: flex;
  justify-content: space-between;
  align-items: center;

  position: sticky;
  top: 0;
  padding-top: 1rem;
  background-color: white;

  &__title {
    color: $primary-text;
    font-size: 1.2rem;
    font-weight: 600;
  }
}

.cartBody {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  &__items {
    display: flex;
    flex-direction: column;
    gap: 1rem;
  }

  &__total {
    font-weight: 700;
    text-align: end;
    font-size: 1.2rem;
  }
}

